# lccc-siphash

./: .gitignore  Cargo.toml  siphash-opt.s
.cargo/: config.toml
bench/: Cargo.toml
bench/src/: main.rs
src/: build.rs  lib.rs  rng.rs  siphash.rs
src/siphash/: clever.rs  generic.rs  serde.rs  x86.rs
