[package]
name = "lccc-siphash"
version = "0.1.0"
edition = "2018"
description="""
Highly Optimized siphash implementation for use by lccc
"""
license = "BSD-2-Clause-Patent"
exclude=["bench"]
rust-version="1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
crate-type=["rlib"]

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"