[package]
name = "lccc-siphash"
version = "0.1.0"
edition = "2021"
description = """
Highly Optimized siphash implementation for use by lccc
"""
license = "BSD-2-Clause-Patent"
exclude = ["bench"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.9.3", optional = true }
serde = { version = "1.0.219", optional = true, default-features = false }
getrandom = { version = "0.3.4", optional = true }

[lib]
crate-type = ["rlib"]

[features]
inspect-raw = []
rng = []
rand_core = ["dep:rand_core", "rng"]
serde = ["dep:serde"]
random-state = ["dep:getrandom"]
nightly-docs = []
nightly-prefixfree_extras = []

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"

[package.metadata.docs.rs]
all-features = true
